2193 [Updater] some minor enhancements for offline mode
2192 [MediaInfo] ignore phantom TiVo audio tracks
2191 [OneClick] added AviSource() as way to process AVI files
     [File Indexer] added DFSC/VFW and CFHD/CINEFORM to the list of not by FFMS supported codecs
2190 [FFMS] try to index audio tracks only if at least one audio track has been selected
2188 [Updater] renamed "avisynth" package to "avs" to avoid confusion that AviSynth may not be installed
2187 [HD Streams Extractor] fixed "File Mode" when using multiple input files
2186 fixed a crash when using a corrupt settings.xml. Bug #3574768
2185 [OneClick] fixed a crash when using external audio files. Bug #3574820
2184 portable AviSynth will be used if AviSynth is not installed
2183 [File Indexer] added selectable FFMS index file location
                    added PGC handling
2182 [x264] increased the maximum value for --vbv-maxrate and --vbv-bufsize. Bug #3573545
2181 [DGIndexNV] enhanced progress information (requires dgindexnv 2043+)
2174 [OneClick] fixed included subtitle handling if input container is not MKV/VOB
2172 [OneClick] support multiple input files per drag & drop
2171 [OneClick] cosmetics #2
2170 [OneClick] cosmetics
2169 [FFMPEG] some adjustments for newer builds
2164 [OneClick] added option to select different default audio settings for different languages
2163 [OneClick] fixed muxing of external subtitle files
2162 [OneClick] added up/down buttons for the indexer priority selection
2161 [OneClick] added option for the default output directory
2160 [OneClick] added option to disable audio/video tracks completely by default
2159 [OneClick] use the correct input file if using Blu-ray input with the option "don't encode video"
2158 [HD Streams Extractor] fixed a crash
2157 [OneClick] added an improved OneClick encoder with these changes:
     - added subtitle control (including delay, language, name, forced/default flag). Feature request #2752988