@@ -30,7 +30,7 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyDescription("GUI frontend for video encoding")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyProduct("MeGUI")]
-[assembly: AssemblyCompany("www.doom9.net")]
+[assembly: AssemblyCompany("http://sourceforge.net/projects/megui")]
 [assembly: AssemblyCopyright("Licensed under the GPL")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]		
@@ -46,7 +46,8 @@ using System.Runtime.CompilerServices;
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
 
-[assembly: AssemblyVersion("0.3.5.31")]
+[assembly: AssemblyVersion("1.0.2193.0")]
+[assembly: AssemblyFileVersion("1.0.2193.0")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
